[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "graph_force"
description = "A library for embedding graphs in 2D space, using force-directed layouts."
keywords = ["graph", "layout", "force-directed"]
authors = [ { email = "niko@rerere.org", name = "Niko Abeler" } ]
maintainers = [ { email = "niko@rerere.org", name = "Niko Abeler" } ]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",    
]


[project.urls]
homepage = "https://github.com/H4kor/graph-force/"
repository = "https://github.com/H4kor/graph-force/"
